# scripts

./: CMakeLists.txt  README.md  open-project.sh  paths.sh
cmake/: CMakeLists.txt
cmake/includes/: Export.cmake  UnitTest.cmake  Utils.cmake
cmake/modules/: FindAndroid.cmake  FindAssimp.cmake  FindCppnetlib.cmake  FindGLFW.cmake  FindGLM.cmake  FindLodePNG.cmake  FindSQLite3.cmake
cmake/toolchains/: android-toolchain.cmake  linux-64-toolchain.cmake
include/: common.sh  generate-data.py
toolchains/android/ndk/: android-ndk.sh
user/: user-check.sh
